# LDSI

./: .codecov.yml  .gitignore  Cargo.toml  LICENSE  README.md  ideas.md  tarpaulin.toml  todo.md
.github/workflows/: ci.yml
ldsi-research-notes/: 20260209-01-elastic-window-topology.md  20260209-02-dynamic-stopwords-zipf.md  20260209-03-formula-entropy-shift.md  20260209-04-grid-search-results.md  20260209-05-coefficient-unification.md  20260209-06-injector-mock-tests.md  20260209-07-benchmark-live.md  20260209-08-formula-ceiling-analysis.md  20260209-09-horseshoe-theory.md  20260209-10-ncd-short-text-damping.md  20260209-11-formula-v030-design.md  README.md
src/: lib.rs  main.rs
src/audit/: logger.rs  mod.rs
src/core/: entropy.rs  mod.rs  ncd.rs  topology.rs
src/probe/: cleaner.rs  injector.rs  mod.rs
src/server/: handlers.rs  mod.rs  state.rs
static/css/: style.css
static/js/: app.js
templates/: dashboard.html  results.html
tests/: sadistic_tests.rs
