[package]
name = "ldsi"
version = "0.2.0"
edition = "2024"
authors = ["Julien DABERT"]
description = "Lyapunov-Dabert Stability Index - White Box LLM Benchmark"
license = "Apache-2.0"
repository = "https://github.com/menezis-ai/LDSI"

[dependencies]
# Compression (NCD)
zstd = "0.13"

# Graphes (Topologie)
petgraph = "0.6"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Async HTTP (API LLM)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Regex (Tokenization White Box)
regex = "1.10"

# Unicode normalization
unicode-normalization = "0.1"

# ========== WEB UI (Control Center) ==========

# Web Server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# HTML Templates (Server-side rendering)
tera = "1.19"

# Embed static files in binary (Portable!)
rust-embed = "8.0"

# UUID for benchmark sessions
uuid = { version = "1.0", features = ["v4"] }

# Async utilities
futures = "0.3"

# MIME type detection
mime_guess = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
